# day_ahead_v2

./: .cache.sqlite  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  day_ahead_v2.toml  environment.yml  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: devcontainer.dockerfile  devcontainer.json
config/: config_dev.yaml
configs/: config.yaml  config_dev.yaml  config_test.yaml
data/: AGGREGATED_UNAVAILABILITY_OF_CONSUMPTION_UNITS_2023.csv  AGGREGATED_UNAVAILABILITY_OF_CONSUMPTION_UNITS_2024.csv  AGGREGATED_UNAVAILABILITY_OF_CONSUMPTION_UNITS_2025.csv  Actual Generation per Production Type_2023 - DK1.csv  Actual Generation per Production Type_2024 - DK1.csv  Cross-Border Physical Flow_2023 - DK1 to DE-AT-LU.csv  Cross-Border Physical Flow_2023 - DK1 to DE-LU.csv  Cross-Border Physical Flow_2023 - DK1 to DK2.csv  Cross-Border Physical Flow_2023 - DK1 to GB.csv  Cross-Border Physical Flow_2023 - DK1 to NL.csv  Cross-Border Physical Flow_2023 - DK1 to NO2.csv  Cross-Border Physical Flow_2023 - DK1 to SE3.csv  Cross-Border Physical Flow_2023 - DK2 to DE-AT-LU.csv  Cross-Border Physical Flow_2023 - DK2 to DE-LU.csv  Cross-Border Physical Flow_2023 - DK2 to SE4.csv  Cross-Border Physical Flow_2024 - DK1 to DE-AT-LU.csv  Cross-Border Physical Flow_2024 - DK1 to DE-LU.csv  Cross-Border Physical Flow_2024 - DK1 to DK2.csv  Cross-Border Physical Flow_2024 - DK1 to GB.csv  Cross-Border Physical Flow_2024 - DK1 to NL.csv  Cross-Border Physical Flow_2024 - DK1 to NO2.csv  Cross-Border Physical Flow_2024 - DK1 to SE3.csv  Cross-Border Physical Flow_2024 - DK2 to DE-AT-LU.csv  Cross-Border Physical Flow_2024 - DK2 to DE-LU.csv  Cross-Border Physical Flow_2024 - DK2 to SE4.csv  Cross-Border Physical Flow_2025 - DK1 to DE-AT-LU.csv  Cross-Border Physical Flow_2025 - DK1 to DE-LU.csv  Cross-Border Physical Flow_2025 - DK1 to DK2.csv  Cross-Border Physical Flow_2025 - DK1 to GB.csv  Cross-Border Physical Flow_2025 - DK1 to NL.csv  Cross-Border Physical Flow_2025 - DK1 to NO2.csv  Cross-Border Physical Flow_2025 - DK1 to SE3.csv  Cross-Border Physical Flow_2025 - DK2 to SE4.csv  Cross-Border Physical Flow_2025- DK2 to DE-LU.csv  Forecasted Transfer Capacities - Day Ahead_2023 - DK1 to GB.csv  Forecasted Transfer Capacities - Day Ahead_2023 - DK1 to NL.csv  Forecasted Transfer Capacities - Day Ahead_2023 - DK2 to DE-LU.csv  Forecasted Transfer Capacities - Day Ahead_2024 - DK1 to DE-LU.csv  Forecasted Transfer Capacities - Day Ahead_2024 - DK1 to GB.csv  Forecasted Transfer Capacities - Day Ahead_2024 - DK1 to NL.csv  (+12 more)
dockerfiles/: api.dockerfile  (+1 more)
(+92 files in other folders)
